		  History of changes to python-icat
		  =================================

* Version 0.2.0 (not yet released)

* Version 0.1.0 (released 2013-11-01)

 + Initial version

# Local Variables:
# mode: org
# End: